--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 name: Build & Deploy (Pages)
+
 on:
   push:
     branches: [ main ]
@@ -10,7 +11,11 @@ permissions:
   pages: write
   id-token: write
 
-jaobs:
+concurrency:
+  group: pages
+  cancel-in-progress: true
+
+jobs:
   build:
     runs-on: ubuntu-latest
     steps:
@@ -18,12 +23,22 @@ jaobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+      # Build Drag-and-Drop Seite
       - run: node build.js
+      # An Pages übergeben
       - uses: actions/upload-pages-artifact@v3
         with:
           path: dist
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - uses: actions/deploy-pages@v4 
+      - id: deployment
+        uses: actions/deploy-pages@v4
